--- a/app/src/main/res/layout/dilog_bulk_update.xml
+++ b/app/src/main/res/layout/dilog_bulk_update.xml
@@ -1,12 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    app:cardCornerRadius="6dp"
-    app:cardElevation="5dp"
-    android:layout_marginHorizontal="9dp"
+    android:layout_marginTop="110dp"
+    android:layout_marginHorizontal="59dp"
     app:cardBackgroundColor="@color/white"
     xmlns:app="http://schemas.android.com/apk/res-auto">
+    <androidx.cardview.widget.CardView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        app:cardCornerRadius="12dp"
+        app:cardElevation="5dp">
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent">
@@ -16,7 +20,7 @@
         android:layout_height="wrap_content"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        android:textSize="@dimen/H5"
+        android:textSize="@dimen/H3"
         android:text="Bulk Update"
         android:textColor="@color/secondary"
         android:fontFamily="@font/roboto_bold"
@@ -70,7 +74,7 @@
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:textSize="@dimen/H6"
+                    android:textSize="@dimen/H5"
                     android:text="Inventory"
                     android:layout_marginStart="10dp"
                     android:textColor="@color/secondary"
@@ -81,7 +85,7 @@
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:textSize="@dimen/H7"
+                    android:textSize="@dimen/H6"
                     android:text="Reset"
                     android:textColor="@color/secondary"
                     android:fontFamily="@font/roboto_bold"
@@ -149,7 +153,7 @@
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:textSize="@dimen/H6"
+                    android:textSize="@dimen/H5"
                     android:text="Rates"
                     android:layout_marginStart="10dp"
                     android:textColor="@color/secondary"
@@ -160,7 +164,7 @@
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:textSize="@dimen/H7"
+                    android:textSize="@dimen/H6"
                     android:text="Reset"
                     android:textColor="@color/secondary"
                     android:fontFamily="@font/roboto_bold"
@@ -228,7 +232,7 @@
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:textSize="@dimen/H6"
+                    android:textSize="@dimen/H5"
                     android:text="Restrictions"
                     android:layout_marginStart="10dp"
                     android:textColor="@color/secondary"
@@ -239,7 +243,7 @@
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:textSize="@dimen/H7"
+                    android:textSize="@dimen/H6"
                     android:text="Reset"
                     android:textColor="@color/secondary"
                     android:fontFamily="@font/roboto_bold"
@@ -310,68 +314,220 @@
                 android:editable="false"
                 android:focusable="true"/>
         </com.google.android.material.textfield.TextInputLayout>
+
         <TextView
             android:id="@+id/txt_apply"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             app:layout_constraintTop_toBottomOf="@id/from_Layout"
             app:layout_constraintStart_toStartOf="@id/from_Layout"
-            android:text="Apply To"
-            android:textSize="11sp"
             android:layout_marginTop="15dp"
+            android:text="Apply To"
+            android:textSize="@dimen/H5"
             android:textColor="@color/lightBlack"/>
         <TextView
             android:id="@+id/txt_all_days"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="86dp"
+            android:layout_height="30dp"
+            android:textAlignment="center"
+            android:gravity="center"
             app:layout_constraintTop_toBottomOf="@id/txt_apply"
             app:layout_constraintStart_toEndOf="@id/txt_apply"
             app:layout_constraintEnd_toEndOf="@id/txt_apply"
             android:layout_marginTop="16dp"
-            android:textSize="11sp"
+            android:textSize="@dimen/H5"
             android:textColor="@color/lightBlack"
             android:text="All Days"/>
         <TextView
             android:id="@+id/txt_weekends"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="86dp"
+            android:layout_height="30dp"
+            android:textAlignment="center"
+            android:gravity="center"
             app:layout_constraintStart_toEndOf="@id/txt_all_days"
             app:layout_constraintBottom_toBottomOf="@id/txt_all_days"
-            app:layout_constraintEnd_toEndOf="@id/txt_week_days"
+            app:layout_constraintEnd_toStartOf="@id/txt_week_days"
             android:layout_marginTop="16dp"
-            android:textSize="11sp"
+            android:textSize="@dimen/H5"
             android:textColor="@color/lightBlack"
-            android:text="All Days"/>
+            android:text="Weekends"/>
         <TextView
             android:id="@+id/txt_week_days"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            app:layout_constraintStart_toEndOf="@id/txt_all_days"
+            android:layout_width="86dp"
+            android:layout_height="30dp"
+            android:textAlignment="center"
+            android:gravity="center"
+            android:background="@drawable/rounded_black_border"
+            app:layout_constraintStart_toEndOf="@id/txt_weekends"
             app:layout_constraintBottom_toBottomOf="@id/txt_all_days"
             app:layout_constraintEnd_toEndOf="@id/txt_custom"
             android:layout_marginTop="16dp"
-            android:background="@drawable/rounded_corner_text_background"
-            android:textSize="11sp"
+            android:textSize="@dimen/H5"
             android:textColor="@color/lightBlack"
-            android:text="All Days"/>
+            android:text="Weekdays"/>
         <TextView
             android:id="@+id/txt_custom"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            app:layout_constraintStart_toEndOf="@id/txt_all_days"
+            android:layout_width="86dp"
+            android:layout_height="30dp"
+            android:textAlignment="center"
+            android:gravity="center"
+            android:background="@drawable/rounded_black_border"
+            app:layout_constraintStart_toEndOf="@id/txt_week_days"
             app:layout_constraintBottom_toBottomOf="@id/txt_all_days"
             app:layout_constraintEnd_toEndOf="@id/to_Layout"
             app:layout_constraintHorizontal_bias="1"
             android:layout_marginTop="16dp"
-            android:textSize="11sp"
-            android:textColor="@color/lightBlack"
-            android:text="All Days"/>
+            android:textSize="@dimen/H5"
+            android:textStyle="bold"
+            android:textColor="@color/black"
+            android:text="Custom"/>
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:id="@+id/cl_day"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="13dp"
+            app:layout_constraintStart_toStartOf="@id/txt_apply"
+            app:layout_constraintTop_toBottomOf="@id/txt_custom"
+            app:layout_constraintEnd_toEndOf="@id/to_Layout">
+            <TextView
+                android:id="@+id/saturday"
+                android:layout_width="54dp"
+                android:layout_height="30dp"
+                android:textAlignment="center"
+                android:gravity="center"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toStartOf="@id/sunday"
+                app:layout_constraintBottom_toBottomOf="parent"
+                android:layout_marginTop="16dp"
+                android:textSize="@dimen/H5"
+                android:textColor="@color/black"
+                android:background="@drawable/rounded_black_border"
+                android:text="Sat"/>
+            <TextView
+                android:id="@+id/sunday"
+                android:layout_width="54dp"
+                android:layout_height="30dp"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintStart_toEndOf="@id/saturday"
+                app:layout_constraintEnd_toStartOf="@id/monday"
+                android:background="@color/white"
+                android:textAlignment="center"
+                android:gravity="center"
+                android:layout_marginTop="16dp"
+                android:textSize="@dimen/H5"
+                android:textColor="@color/lightBlack"
+                android:text="Sun"/>
+            <TextView
+                android:id="@+id/monday"
+                android:layout_width="54dp"
+                android:layout_height="30dp"
+                android:textAlignment="center"
+                android:gravity="center"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintStart_toEndOf="@id/sunday"
+                app:layout_constraintEnd_toStartOf="@id/tuesday"
+                android:layout_marginTop="16dp"
+                android:textSize="@dimen/H5"
+                android:background="@drawable/rounded_black_border"
+                android:textColor="@color/black"
+                android:text="Mon"/>
+            <TextView
+                android:id="@+id/tuesday"
+                android:layout_width="54dp"
+                android:layout_height="30dp"
+                android:textAlignment="center"
+                android:gravity="center"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintStart_toEndOf="@id/monday"
+                app:layout_constraintEnd_toStartOf="@id/wed"
+                android:layout_marginTop="16dp"
+                android:textSize="@dimen/H5"
+                android:textColor="@color/lightBlack"
+                android:text="Tue"/>
+            <TextView
+                android:id="@+id/wed"
+                android:layout_width="54dp"
+                android:layout_height="30dp"
+                android:textAlignment="center"
+                android:gravity="center"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintStart_toEndOf="@id/tuesday"
+                app:layout_constraintEnd_toStartOf="@id/thursday"
+                android:layout_marginTop="16dp"
+                android:textSize="@dimen/H5"
+                android:background="@drawable/rounded_black_border"
+                android:textColor="@color/black"
+                android:text="Wed"/>
+            <TextView
+                android:id="@+id/thursday"
+                android:layout_width="54dp"
+                android:layout_height="30dp"
+                android:textAlignment="center"
+                android:gravity="center"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintStart_toEndOf="@id/wed"
+                app:layout_constraintEnd_toStartOf="@id/fri"
+                android:layout_marginTop="16dp"
+                android:textSize="@dimen/H5"
+                android:textColor="@color/lightBlack"
+                android:text="Thu"/>
+            <TextView
+                android:id="@+id/fri"
+                android:layout_width="54dp"
+                android:layout_height="30dp"
+                android:textAlignment="center"
+                android:gravity="center"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintStart_toEndOf="@id/thursday"
+                app:layout_constraintEnd_toEndOf="parent"
+                android:layout_marginTop="16dp"
+                android:textSize="@dimen/H5"
+                android:textColor="@color/lightBlack"
+                android:text="Fri"/>
+        </androidx.constraintlayout.widget.ConstraintLayout>
+        <TextView
+            android:id="@+id/cancel"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Cancel"
+            android:layout_gravity="center"
+            android:fontFamily="@font/roboto_bold"
+            android:textSize="@dimen/H5"
+            android:padding="15dp"
+            android:layout_marginEnd="20dp"
+            android:textColor="@color/black"
+            app:layout_constraintEnd_toStartOf="@id/continueBtn"
+            app:layout_constraintBottom_toBottomOf="@id/continueBtn"
+            app:layout_constraintTop_toTopOf="@id/continueBtn"/>
 
+        <androidx.cardview.widget.CardView
+            android:id="@+id/continueBtn"
+            android:layout_width="110dp"
+            android:layout_height="45dp"
+            android:layout_marginTop="26dp"
+            android:layout_marginEnd="20dp"
+            android:layout_marginBottom="20dp"
+            android:clickable="true"
+            android:backgroundTint="@color/black"
+            app:cardCornerRadius="10dp"
+            android:focusable="true"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/cl_day"
+            app:layout_constraintEnd_toEndOf="parent">
 
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Save"
+                android:layout_gravity="center"
+                android:fontFamily="@font/roboto_bold"
+                android:textSize="@dimen/H5"
+                android:textColor="@color/white"/>
 
+        </androidx.cardview.widget.CardView>
 
-
-
+        </androidx.constraintlayout.widget.ConstraintLayout>
+    </androidx.cardview.widget.CardView>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
-</androidx.cardview.widget.CardView>
