--- a/app/src/main/res/layout/activity_dashboard.xml
+++ b/app/src/main/res/layout/activity_dashboard.xml
@@ -9,7 +9,8 @@
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:background="@color/secondaryBackground">
 
         <androidx.appcompat.widget.Toolbar
             android:id="@+id/toolbar"
@@ -36,7 +37,7 @@
                             android:layout_height="50dp"
                             android:layout_gravity="center"
                             android:backgroundTint="@color/primaryBackground"
-                     android:layout_marginStart="15dp"
+                            android:layout_marginStart="10dp"
                             app:layout_constraintTop_toTopOf="parent"
                             app:layout_constraintBottom_toBottomOf="parent"
                             app:layout_constraintStart_toStartOf="parent"
@@ -50,6 +51,7 @@
                                     android:id="@+id/hotel_img"
                                     android:layout_width="45dp"
                                     android:layout_height="45dp"
+                                    android:layout_marginStart="5dp"
                                     app:layout_constraintTop_toTopOf="parent"
                                     app:layout_constraintBottom_toBottomOf="parent"
                                     app:layout_constraintStart_toStartOf="parent"
@@ -104,7 +106,7 @@
                             android:layout_height="50dp"
                             android:layout_gravity="center"
                             android:backgroundTint="@color/primaryBackground"
-                     android:layout_marginEnd="15dp"
+                            android:layout_marginEnd="15dp"
                             app:layout_constraintTop_toTopOf="parent"
                             app:layout_constraintBottom_toBottomOf="parent"
                             app:layout_constraintEnd_toEndOf="parent"
@@ -118,6 +120,7 @@
                                     android:id="@+id/profile"
                                     android:layout_width="45dp"
                                     android:layout_height="45dp"
+                                    android:layout_marginStart="5dp"
                                     app:layout_constraintTop_toTopOf="parent"
                                     app:layout_constraintBottom_toBottomOf="parent"
                                     app:layout_constraintStart_toStartOf="parent"
