--- a/app/src/main/res/layout/dialog_add_amenities.xml
+++ b/app/src/main/res/layout/dialog_add_amenities.xml
@@ -4,35 +4,47 @@
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    style="@style/CardViewTheme"
     android:layout_margin="50dp"
     app:cardCornerRadius="20dp"
-    app:cardElevation="20dp">
+    app:cardElevation="10dp">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-        <TextView
+        <androidx.cardview.widget.CardView
             android:id="@+id/aA"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Add Amenities"
-            android:fontFamily="@font/roboto_bold"
-            android:textSize="@dimen/H1"
-            android:layout_marginTop="20dp"
-            android:layout_marginStart="30dp"
+            style="@style/CardViewTheme"
+            app:cardElevation="4dp"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintStart_toStartOf="parent"/>
+            app:layout_constraintStart_toStartOf="parent">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Add Amenities"
+                android:fontFamily="@font/roboto_bold"
+                android:textSize="@dimen/H2"
+                android:layout_marginVertical="20dp"
+                android:layout_marginStart="30dp"/>
+
+        </androidx.cardview.widget.CardView>
 
         <androidx.cardview.widget.CardView
             android:id="@+id/searchCard"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            style="@style/CardViewTheme"
+            app:cardBackgroundColor="@color/white"
             app:cardCornerRadius="12dp"
-            android:layout_marginTop="20dp"
+            app:cardElevation="4dp"
+            android:layout_marginStart="30dp"
+            android:layout_marginTop="30dp"
             app:layout_constraintStart_toStartOf="@id/aA"
-            app:layout_constraintTop_toBottomOf="@id/aA"
-            app:cardBackgroundColor="@color/secondaryBackground">
+            app:layout_constraintTop_toBottomOf="@id/aA">
 
             <EditText
                 android:id="@+id/search"
@@ -51,7 +63,7 @@
             android:layout_height="wrap_content"
             android:orientation="horizontal"
             android:gravity="center_vertical"
-            app:layout_constraintHorizontal_bias="0.1"
+            app:layout_constraintHorizontal_bias="0.05"
             app:layout_constraintTop_toTopOf="@id/searchCard"
             app:layout_constraintEnd_toStartOf="@id/createNewAmenityBtn"
             app:layout_constraintBottom_toBottomOf="@id/searchCard"
@@ -67,14 +79,14 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Filter"
-                android:textSize="@dimen/H3"
-                android:layout_marginHorizontal="5dp"
+                android:textSize="@dimen/H4"
+                android:layout_marginHorizontal="2dp"
                 android:textColor="@color/secondary"
                 android:fontFamily="@font/roboto_medium"/>
 
             <ImageView
-                android:layout_width="25dp"
-                android:layout_height="25dp"
+                android:layout_width="20dp"
+                android:layout_height="20dp"
                 android:layout_marginHorizontal="5dp"
                 android:src="@drawable/svg_filter"/>
 
@@ -91,14 +103,14 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Sort"
-                android:textSize="@dimen/H3"
-                android:layout_marginHorizontal="5dp"
+                android:textSize="@dimen/H4"
+                android:layout_marginHorizontal="2dp"
                 android:textColor="@color/secondary"
                 android:fontFamily="@font/roboto_medium"/>
 
             <ImageView
-                android:layout_width="28dp"
-                android:layout_height="28dp"
+                android:layout_width="22dp"
+                android:layout_height="22dp"
                 android:scaleType="fitXY"
                 android:layout_marginHorizontal="5dp"
                 android:src="@drawable/svg_sort"/>
@@ -112,7 +124,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="+ Create New"
-            android:textSize="@dimen/H2"
+            android:textSize="@dimen/H3"
             android:layout_marginHorizontal="15dp"
             android:padding="10dp"
             android:textColor="@color/secondary"
@@ -123,12 +135,14 @@
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/amenitiesRecycler"
-            android:layout_width="match_parent"
+            android:layout_width="0dp"
             android:layout_height="0dp"
             android:layout_marginTop="30dp"
             app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
-            app:spanCount="3"
+            app:spanCount="5"
             tools:listitem="@layout/item_amenities"
+            app:layout_constraintStart_toStartOf="@id/searchCard"
+            app:layout_constraintEnd_toEndOf="@id/createNewAmenityBtn"
             app:layout_constraintBottom_toTopOf="@id/saveBtn"
             app:layout_constraintTop_toBottomOf="@id/ll5"/>
 
