--- a/app/src/main/res/layout/dialog_create_amenities.xml
+++ b/app/src/main/res/layout/dialog_create_amenities.xml
@@ -2,27 +2,36 @@
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    style="@style/CardViewTheme"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_margin="50dp"
     app:cardCornerRadius="20dp"
-    app:cardElevation="20dp">
+    app:cardElevation="10dp">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-        <TextView
+        <androidx.cardview.widget.CardView
             android:id="@+id/aA"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Create New Amenities"
-            android:fontFamily="@font/roboto_bold"
-            android:textSize="@dimen/H1"
-            android:layout_marginTop="20dp"
-            android:layout_marginStart="30dp"
+            style="@style/CardViewTheme"
+            app:cardElevation="4dp"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintStart_toStartOf="parent"/>
+            app:layout_constraintStart_toStartOf="parent">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Create New Amenities"
+                android:fontFamily="@font/roboto_bold"
+                android:textSize="@dimen/H1"
+                android:layout_marginVertical="20dp"
+                android:layout_marginStart="30dp"/>
+
+        </androidx.cardview.widget.CardView>
 
         <LinearLayout
             android:id="@+id/ll5"
@@ -129,7 +138,7 @@
             android:text="Amenity Icon"
             android:fontFamily="@font/roboto_bold"
             android:textSize="@dimen/H1"
-            android:layout_marginTop="20dp"
+            android:layout_margin="30dp"
             app:layout_constraintTop_toBottomOf="@id/ll5"
             app:layout_constraintStart_toStartOf="@id/aA"/>
 
@@ -147,12 +156,14 @@
             android:id="@+id/searchCard"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            app:cardElevation="4dp"
+            style="@style/CardViewTheme"
+            app:cardBackgroundColor="@color/white"
             app:cardCornerRadius="12dp"
             android:layout_marginStart="20dp"
             app:layout_constraintTop_toTopOf="@id/aI"
             app:layout_constraintBottom_toBottomOf="@id/aI"
-            app:layout_constraintStart_toEndOf="@id/switchBtn"
-            app:cardBackgroundColor="@color/secondaryBackground">
+            app:layout_constraintStart_toEndOf="@id/switchBtn">
 
             <EditText
                 android:id="@+id/search"
@@ -170,7 +181,7 @@
             android:id="@+id/amenitiesIconRecycler"
             android:layout_width="match_parent"
             android:layout_height="0dp"
-            android:layout_margin="20dp"
+            android:layout_margin="30dp"
             app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
             app:spanCount="10"
             tools:listitem="@layout/item_icon"
