--- a/app/src/main/res/layout/item_properties_3.xml
+++ b/app/src/main/res/layout/item_properties_3.xml
@@ -6,70 +6,110 @@
     android:layout_height="wrap_content"
     android:orientation="vertical">
 
-    <LinearLayout
-        android:id="@+id/items_linear"
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
-        android:weightSum="11"
-        tools:layout_editor_absoluteX="1dp">
+        android:layout_height="match_parent"
+        android:layout_marginHorizontal="10dp"
+        android:layout_marginTop="10dp">
 
         <TextView
-            android:layout_width="0dp"
+            android:id="@+id/hCode"
+            android:layout_width="100dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="10dp"
             android:layout_weight="1"
             android:fontFamily="@font/roboto"
-            android:text="Cell Data"
+            android:text="H-Code"
             android:textColor="@color/secondary"
-            android:textSize="@dimen/H6" />
+            android:textSize="@dimen/H6"
+            android:singleLine="true"
+            app:layout_constraintEnd_toStartOf="@id/propertyName"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintStart_toStartOf="parent"/>
 
         <TextView
-            android:id="@+id/roomType"
+            android:id="@+id/propertyName"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="3"
+            android:text="Property Name"
             android:fontFamily="@font/roboto"
-            android:text="Hotel Grand"
             android:textColor="@color/secondary"
-            android:textSize="@dimen/H6" />
+            android:textSize="@dimen/H6"
+            android:singleLine="true"
+            android:layout_marginStart="5dp"
+            app:layout_constraintEnd_toStartOf="@id/guide1"
+            app:layout_constraintStart_toEndOf="@id/hCode"
+            app:layout_constraintBottom_toBottomOf="@id/hCode"
+            app:layout_constraintTop_toTopOf="@id/hCode"/>
+
+        <androidx.constraintlayout.widget.Guideline
+            android:id="@+id/guide1"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            app:layout_constraintGuide_percent="0.28"/>
 
         <TextView
+            android:id="@+id/propertyType"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginStart="10dp"
             android:layout_weight="1"
             android:fontFamily="@font/roboto"
-            android:text="Hotel"
+            android:text="Property Type"
             android:textColor="@color/secondary"
-            android:textSize="@dimen/H6" />
+            android:textSize="@dimen/H6"
+            android:singleLine="true"
+            android:layout_marginStart="5dp"
+            app:layout_constraintEnd_toStartOf="@id/location"
+            app:layout_constraintStart_toEndOf="@id/guide1"
+            app:layout_constraintBottom_toBottomOf="@id/hCode"
+            app:layout_constraintTop_toTopOf="@id/hCode"/>
 
         <TextView
-            android:id="@+id/cityName"
+            android:id="@+id/location"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginStart="10dp"
             android:layout_weight="1"
+            android:text="Location"
             android:fontFamily="@font/roboto"
-            android:text="Kanpur, India"
             android:textColor="@color/secondary"
-            android:textSize="@dimen/H6" />
+            android:textSize="@dimen/H6"
+            android:singleLine="true"
+            android:layout_marginStart="5dp"
+            app:layout_constraintEnd_toStartOf="@id/occupancy"
+            app:layout_constraintStart_toEndOf="@id/propertyType"
+            app:layout_constraintBottom_toBottomOf="@id/hCode"
+            app:layout_constraintTop_toTopOf="@id/hCode"/>
 
         <TextView
+            android:id="@+id/occupancy"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginStart="10dp"
             android:layout_weight="1"
             android:fontFamily="@font/roboto"
-            android:text="24"
+            android:text="Occupancy"
             android:textColor="@color/secondary"
-            android:textSize="@dimen/H6" />
+            android:textSize="@dimen/H6"
+            android:singleLine="true"
+            android:layout_marginStart="5dp"
+            app:layout_constraintEnd_toStartOf="@id/totalRooms"
+            app:layout_constraintStart_toEndOf="@id/location"
+            app:layout_constraintBottom_toBottomOf="@id/hCode"
+            app:layout_constraintTop_toTopOf="@id/hCode"/>
 
         <LinearLayout
+            android:id="@+id/totalRooms"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:orientation="horizontal">
+            android:orientation="horizontal"
+            android:layout_marginStart="5dp"
+            app:layout_constraintEnd_toStartOf="@id/amenities"
+            app:layout_constraintStart_toEndOf="@id/occupancy"
+            app:layout_constraintBottom_toBottomOf="@id/hCode"
+            app:layout_constraintTop_toTopOf="@id/hCode">
 
             <TextView
                 android:layout_width="wrap_content"
@@ -92,10 +132,16 @@
         </LinearLayout>
 
         <LinearLayout
+            android:id="@+id/amenities"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:orientation="horizontal">
+            android:orientation="horizontal"
+            android:layout_marginStart="5dp"
+            app:layout_constraintEnd_toStartOf="@id/status"
+            app:layout_constraintStart_toEndOf="@id/totalRooms"
+            app:layout_constraintBottom_toBottomOf="@id/hCode"
+            app:layout_constraintTop_toTopOf="@id/hCode">
 
             <TextView
                 android:layout_width="wrap_content"
@@ -118,22 +164,34 @@
         </LinearLayout>
 
         <TextView
+            android:id="@+id/status"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginStart="10dp"
             android:layout_weight="1"
             android:fontFamily="@font/roboto"
-            android:text="Active"
-            android:textColor="@color/primary"
-            android:textSize="@dimen/H6" />
+            android:text="Status"
+            android:textColor="@color/secondary"
+            android:textSize="@dimen/H6"
+            android:singleLine="true"
+            android:layout_marginStart="5dp"
+            app:layout_constraintEnd_toStartOf="@id/actions"
+            app:layout_constraintStart_toEndOf="@id/amenities"
+            app:layout_constraintBottom_toBottomOf="@id/hCode"
+            app:layout_constraintTop_toTopOf="@id/hCode"/>
 
         <LinearLayout
+            android:id="@+id/actions"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:gravity="center"
             android:orientation="horizontal"
-            android:weightSum="3">
+            android:weightSum="3"
+            android:layout_marginStart="5dp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toEndOf="@id/status"
+            app:layout_constraintBottom_toBottomOf="@id/hCode"
+            app:layout_constraintTop_toTopOf="@id/hCode">
 
             <ImageView
                 android:layout_width="0dp"
@@ -155,6 +213,6 @@
 
         </LinearLayout>
 
-    </LinearLayout>
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
 </LinearLayout>
