--- a/app/src/main/res/layout/item_properties_3_header.xml
+++ b/app/src/main/res/layout/item_properties_3_header.xml
@@ -21,6 +21,7 @@
             android:text="H-Code"
             android:textColor="@color/subtitle"
             android:textSize="@dimen/H6"
+            android:singleLine="true"
             app:layout_constraintEnd_toStartOf="@id/propertyName"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintTop_toTopOf="parent"
@@ -47,7 +48,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:orientation="vertical"
-            app:layout_constraintGuide_percent="0.25"/>
+            app:layout_constraintGuide_percent="0.28"/>
 
         <TextView
             android:id="@+id/propertyType"
@@ -58,6 +59,7 @@
             android:text="Property Type"
             android:textColor="@color/subtitle"
             android:textSize="@dimen/H6"
+            android:singleLine="true"
             android:layout_marginStart="5dp"
             app:layout_constraintEnd_toStartOf="@id/location"
             app:layout_constraintStart_toEndOf="@id/guide1"
@@ -73,6 +75,7 @@
             android:fontFamily="@font/roboto"
             android:textColor="@color/subtitle"
             android:textSize="@dimen/H6"
+            android:singleLine="true"
             android:layout_marginStart="5dp"
             app:layout_constraintEnd_toStartOf="@id/occupancy"
             app:layout_constraintStart_toEndOf="@id/propertyType"
@@ -88,6 +91,7 @@
             android:text="Occupancy"
             android:textColor="@color/subtitle"
             android:textSize="@dimen/H6"
+            android:singleLine="true"
             android:layout_marginStart="5dp"
             app:layout_constraintEnd_toStartOf="@id/totalRooms"
             app:layout_constraintStart_toEndOf="@id/location"
@@ -103,6 +107,7 @@
             android:text="Total Rooms"
             android:textColor="@color/subtitle"
             android:textSize="@dimen/H6"
+            android:singleLine="true"
             android:layout_marginStart="5dp"
             app:layout_constraintEnd_toStartOf="@id/amenities"
             app:layout_constraintStart_toEndOf="@id/occupancy"
@@ -118,6 +123,7 @@
             android:text="Amenities"
             android:textColor="@color/subtitle"
             android:textSize="@dimen/H6"
+            android:singleLine="true"
             android:layout_marginStart="5dp"
             app:layout_constraintEnd_toStartOf="@id/status"
             app:layout_constraintStart_toEndOf="@id/totalRooms"
@@ -133,6 +139,7 @@
             android:text="Status"
             android:textColor="@color/subtitle"
             android:textSize="@dimen/H6"
+            android:singleLine="true"
             android:layout_marginStart="5dp"
             app:layout_constraintEnd_toStartOf="@id/actions"
             app:layout_constraintStart_toEndOf="@id/amenities"
@@ -147,6 +154,7 @@
             android:text="Actions"
             android:textColor="@color/subtitle"
             android:textSize="@dimen/H6"
+            android:singleLine="true"
             android:layout_marginStart="5dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@id/status"
