--- a/app/src/main/res/layout/item_image.xml
+++ b/app/src/main/res/layout/item_image.xml
@@ -20,13 +20,14 @@
 
     <ImageView
         android:id="@+id/deleteImage"
-        android:layout_width="25dp"
-        android:layout_height="25dp"
+        android:layout_width="40dp"
+        android:layout_height="40dp"
+        android:padding="5dp"
         android:src="@drawable/svg_delete_lite"
-
+        app:tint="@color/black"
+        app:layout_constraintBottom_toTopOf="@id/img"
+        app:layout_constraintStart_toEndOf="@id/img"
         app:layout_constraintEnd_toEndOf="@id/img"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@id/img"
-        app:layout_constraintBottom_toBottomOf="parent"/>
+        app:layout_constraintTop_toTopOf="@id/img"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
