--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -166,4 +166,11 @@
                                 <item name="cornerSize">15%</item>
                             </style>
 
+    <!--Dialog Animation-->
+
+    <style name="DialogAnimation">
+        <item name="android:windowEnterAnimation">@anim/right_in_animation</item>
+        <item name="android:windowExitAnimation">@anim/right_out_animation</item>
+    </style>
+
 </resources>
