--- a/app/src/main/res/layout/item_ota_price.xml
+++ b/app/src/main/res/layout/item_ota_price.xml
@@ -39,7 +39,7 @@
             android:layout_marginEnd="10dp"
             android:gravity="center">
 
-            <EditText
+            <TextView
 
                 style="@style/otaRates"
                 android:layout_width="wrap_content"
@@ -50,7 +50,7 @@
                 android:background="@drawable/inventory_edit_background"
                 android:text="2000" />
 
-            <EditText
+            <TextView
 
                 style="@style/otaRates"
                 android:layout_width="wrap_content"
@@ -61,7 +61,7 @@
                 android:background="@drawable/inventory_edit_background"
                 android:text="2000" />
 
-            <EditText
+            <TextView
 
                 style="@style/otaRates"
                 android:layout_width="wrap_content"
@@ -72,7 +72,7 @@
                 android:background="@drawable/inventory_edit_background"
                 android:text="2000" />
 
-            <EditText
+            <TextView
 
                 style="@style/otaRates"
                 android:layout_width="wrap_content"
@@ -83,7 +83,7 @@
                 android:background="@drawable/inventory_edit_background"
                 android:text="2000" />
 
-            <EditText
+            <TextView
 
                 style="@style/otaRates"
                 android:layout_width="wrap_content"
@@ -94,7 +94,7 @@
                 android:background="@drawable/inventory_edit_background"
                 android:text="2000" />
 
-            <EditText
+            <TextView
 
                 style="@style/otaRates"
                 android:layout_width="wrap_content"
@@ -105,7 +105,7 @@
                 android:background="@drawable/inventory_edit_background"
                 android:text="2000" />
 
-            <EditText
+            <TextView
 
                 style="@style/otaRates"
                 android:layout_width="wrap_content"
@@ -116,7 +116,7 @@
                 android:background="@drawable/inventory_edit_background"
                 android:text="2000" />
 
-            <EditText
+            <TextView
 
                 style="@style/otaRates"
                 android:layout_width="wrap_content"
@@ -127,7 +127,7 @@
                 android:background="@drawable/inventory_edit_background"
                 android:text="2000" />
 
-            <EditText
+            <TextView
 
                 style="@style/otaRates"
                 android:layout_width="wrap_content"
@@ -138,7 +138,7 @@
                 android:background="@drawable/inventory_edit_background"
                 android:text="2000" />
 
-            <EditText
+            <TextView
 
                 style="@style/otaRates"
                 android:layout_width="wrap_content"
