--- a/app/src/main/res/layout/item_remaining_inventory.xml
+++ b/app/src/main/res/layout/item_remaining_inventory.xml
@@ -2,8 +2,7 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools">
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <LinearLayout
         android:id="@+id/layout1"
@@ -36,18 +35,23 @@
             android:layout_marginEnd="10dp"
             android:gravity="center">
 
-            <EditText
+            <TextView
                 android:id="@+id/inventory_1"
                 style="@style/inventoryText"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
+                android:padding="5dp"
+                android:cursorVisible="true"
+                android:inputType="number"
+                android:focusable="true"
+                android:focusableInTouchMode="true"
                 android:layout_marginStart="15dp"
                 android:layout_weight="1"
                 android:background="@drawable/inventory_edit_background"
                 android:text="6" />
 
-            <EditText
+            <TextView
                 android:id="@+id/inventory_2"
                 style="@style/inventoryText"
                 android:layout_width="wrap_content"
@@ -58,7 +62,7 @@
                 android:background="@drawable/inventory_edit_background"
                 android:text="6" />
 
-            <EditText
+            <TextView
                 android:id="@+id/inventory_3"
                 style="@style/inventoryText"
                 android:layout_width="wrap_content"
@@ -69,7 +73,7 @@
                 android:background="@drawable/inventory_edit_background"
                 android:text="6" />
 
-            <EditText
+            <TextView
                 android:id="@+id/inventory_4"
                 style="@style/inventoryText"
                 android:layout_width="wrap_content"
@@ -80,7 +84,7 @@
                 android:background="@drawable/inventory_edit_background"
                 android:text="6" />
 
-            <EditText
+            <TextView
                 android:id="@+id/inventory_5"
                 style="@style/inventoryText"
                 android:layout_width="wrap_content"
@@ -91,7 +95,7 @@
                 android:background="@drawable/inventory_edit_background"
                 android:text="6" />
 
-            <EditText
+            <TextView
                 android:id="@+id/inventory_6"
                 style="@style/inventoryText"
                 android:layout_width="wrap_content"
@@ -102,7 +106,7 @@
                 android:background="@drawable/inventory_edit_background"
                 android:text="6" />
 
-            <EditText
+            <TextView
                 android:id="@+id/inventory_7"
                 style="@style/inventoryText"
                 android:layout_width="wrap_content"
@@ -113,7 +117,7 @@
                 android:background="@drawable/inventory_edit_background"
                 android:text="6" />
 
-            <EditText
+            <TextView
                 android:id="@+id/inventory_8"
                 style="@style/inventoryText"
                 android:layout_width="wrap_content"
@@ -124,7 +128,7 @@
                 android:background="@drawable/inventory_edit_background"
                 android:text="6" />
 
-            <EditText
+            <TextView
                 android:id="@+id/inventory_9"
                 style="@style/inventoryText"
                 android:layout_width="wrap_content"
@@ -135,7 +139,7 @@
                 android:background="@drawable/inventory_edit_background"
                 android:text="6" />
 
-            <EditText
+            <TextView
                 android:id="@+id/inventory_10"
                 style="@style/inventoryText"
                 android:layout_width="wrap_content"
@@ -159,7 +163,6 @@
         app:layout_constraintTop_toBottomOf="@+id/layout1"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        tools:listitem="@layout/item_roomplan_price"
         />
 
 
