--- a/app/src/main/res/layout/item_roomplan_price.xml
+++ b/app/src/main/res/layout/item_roomplan_price.xml
@@ -45,7 +45,7 @@
             android:layout_marginEnd="10dp"
             android:gravity="center">
 
-            <EditText
+            <TextView
 
                 style="@style/rateText"
                 android:layout_width="wrap_content"
@@ -56,7 +56,7 @@
                 android:background="@drawable/inventory_edit_background"
                 android:text="2000" />
 
-            <EditText
+            <TextView
 
                 style="@style/rateText"
                 android:layout_width="wrap_content"
@@ -67,7 +67,7 @@
                 android:background="@drawable/inventory_edit_background"
                 android:text="2000" />
 
-            <EditText
+            <TextView
 
                 style="@style/rateText"
                 android:layout_width="wrap_content"
@@ -78,7 +78,7 @@
                 android:background="@drawable/inventory_edit_background"
                 android:text="2000" />
 
-            <EditText
+            <TextView
 
                 style="@style/rateText"
                 android:layout_width="wrap_content"
@@ -89,7 +89,7 @@
                 android:background="@drawable/inventory_edit_background"
                 android:text="2000" />
 
-            <EditText
+            <TextView
 
                 style="@style/rateText"
                 android:layout_width="wrap_content"
@@ -100,7 +100,7 @@
                 android:background="@drawable/inventory_edit_background"
                 android:text="2000" />
 
-            <EditText
+            <TextView
 
                 style="@style/rateText"
                 android:layout_width="wrap_content"
@@ -111,7 +111,7 @@
                 android:background="@drawable/inventory_edit_background"
                 android:text="2000" />
 
-            <EditText
+            <TextView
 
                 style="@style/rateText"
                 android:layout_width="wrap_content"
@@ -122,7 +122,7 @@
                 android:background="@drawable/inventory_edit_background"
                 android:text="2000" />
 
-            <EditText
+            <TextView
 
                 style="@style/rateText"
                 android:layout_width="wrap_content"
@@ -133,7 +133,7 @@
                 android:background="@drawable/inventory_edit_background"
                 android:text="2000" />
 
-            <EditText
+            <TextView
 
                 style="@style/rateText"
                 android:layout_width="wrap_content"
@@ -144,7 +144,7 @@
                 android:background="@drawable/inventory_edit_background"
                 android:text="2000" />
 
-            <EditText
+            <TextView
 
                 style="@style/rateText"
                 android:layout_width="wrap_content"
