--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -18,6 +18,14 @@
     <dimen name="textInputLayoutHeight">50dp</dimen>
     <dimen name="button_height">45dp</dimen>
 
+
+    <style name="notificationHeading" parent="android:Widget.TextView">
+        <item name="android:textColor">@color/black</item>
+        <item name="android:textStyle">bold</item>
+        <item name="fontFamily">@font/roboto_bold</item>
+        <item name="android:textSize">@dimen/H2</item>
+    </style>
+
                 <!--Onboarding Screen Text Style-->
     <!--Onboarding Screen Heading Text Style-->
     <style name="OnboardingHeadingTextStyle" parent="android:Widget.TextView">
@@ -138,6 +146,14 @@
         <item name="android:shadowColor">@color/shadowColor</item>
         <item name="cardElevation">8dp</item>
         <item name="android:outlineSpotShadowColor">@color/shadowColor</item>
+    </style>
+
+    <style name="DialogFullscreen" parent="Theme.AppCompat.Light.Dialog">
+        <item name="android:windowFullscreen">true</item>
+        <item name="android:windowNoTitle">true</item>
+        <item name="android:background">@color/primaryBackground</item>
+        <item name="android:windowBackground">@android:color/transparent</item>
+
     </style>
 
     <!--Button Card View Theme-->
