--- a/app/src/main/res/layout/fragment_create_rate_plan.xml
+++ b/app/src/main/res/layout/fragment_create_rate_plan.xml
@@ -80,7 +80,7 @@
             app:layout_constraintStart_toStartOf="parent">
 
             <TextView
-                android:id="@+id/propertyProfile"
+                android:id="@+id/ratePlanDetails"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:textColor="@color/secondary"
@@ -91,12 +91,10 @@
                 android:background="@drawable/corner_top_white_background"
                 android:layout_weight="1"
                 android:layout_marginTop="15dp"
-                android:fontFamily="@font/roboto_medium"
-                app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintStart_toStartOf="parent"/>
+                android:fontFamily="@font/roboto_medium"/>
 
             <TextView
-                android:id="@+id/addressAndContacts"
+                android:id="@+id/policies"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:textColor="@color/lightBlack"
@@ -108,9 +106,7 @@
                 android:paddingVertical="10dp"
                 android:layout_marginStart="5dp"
                 android:layout_marginTop="15dp"
-                android:fontFamily="@font/roboto"
-                app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintStart_toStartOf="parent"/>
+                android:fontFamily="@font/roboto"/>
 
             <TextView
                 android:id="@+id/roomsAndAmenities"
@@ -124,14 +120,12 @@
                 android:background="@drawable/corner_top_grey_background"
                 android:visibility="gone"
                 android:layout_marginTop="15dp"
-                android:fontFamily="@font/roboto"
-                app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintStart_toStartOf="parent"/>
+                android:fontFamily="@font/roboto"/>
 
         </LinearLayout>
 
         <androidx.constraintlayout.widget.ConstraintLayout
-            android:id="@+id/propertyProfileLayout"
+            android:id="@+id/ratePlanDetailsLayout"
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:layout_marginHorizontal="20dp"
@@ -699,12 +693,25 @@
 
         </androidx.constraintlayout.widget.ConstraintLayout>
 
+        <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/policiesLayout"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_marginHorizontal="20dp"
+        android:layout_marginBottom="20dp"
+        android:background="@drawable/corner_bottom_white_background"
+        android:paddingBottom="12dp"
+        android:visibility="gone"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/ll">
+
+            <FrameLayout
+                android:id="@+id/ratePlanFragContainer"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"/>
+
     </androidx.constraintlayout.widget.ConstraintLayout>
 
-
-
-
-
-
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
 </ScrollView>
